--- a/index.html
+++ b/index.html
@@ -3,6 +3,40 @@
    <head>
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
+      <main>
+         <h1>Places I've Been</h1>
+         <p>This web page will go over some of my favorite places that I have traveled to in recent years</p>
+
+         <article>
+            <h2>Jamaica</h2>
+            <p>Jamaica is the most revent location that I have visisted. So far i would say it is one of my absolute favorites. From the views and the beaches to the locals and how kind and welcoming they were.</p>
+            <img src="https://www.dropbox.com/s/ll55v1q7y11ctmx/IMG-0311.jpg?raw=1" alt="Jamaica Beach" width="550" height="400">
+         </article>
+
+         <article>
+            <h2>Utah</h2>
+            <p>Utah holds a special place in my heart. I traveled her with my wife after out small wedding ceremony in St. Louis to have pictures taken in the canyons. The pictures were beautiful and it was an amazing experience.</p>
+            <img src="https://www.dropbox.com/s/pqe8ctdysnnnxbz/IMG-0599.jpg?raw=1" alt="Utah Canyons" width="400" height="450">
+         </article>
+
+         <article>
+            <h2>Banff, Canada</h2>
+            <p>Band is one of the first places my wife and I traveled to outside of the country. Banff is a small ski town in the mountains of Alberta. This is a place that we definetely plan to go back to soon.</p>
+            <img src="https://www.dropbox.com/s/s8l1e9wkkpzm70t/IMG-0600.JPG?raw=1" alt="Canadian Mountains" width="550" height="400">
+         </article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </main>
    </body>
 </html>
