changed main header and title

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Places I've Been</title>
+      <title>Where I've Been</title>
 
       <link rel="stylesheet" href="styles.css" />
    </head>
    <body>
       <main>
-         <h1>Places I've Been</h1>
-         <p>This web page will go over some of my favorite places that I have traveled to in recent years</p>
+         <h1 id="mainHeading">WHERE I'VE BEEN</h1>
+         <p class="overView">This web page will go over some of my favorite places that I have traveled to in recent years</p>
 
          <article>
             <h2>Jamaica</h2>
-            <p>Jamaica is the most revent location that I have visisted. So far i would say it is one of my absolute favorites. From the views and the beaches to the locals and how kind and welcoming they were.</p>
+            <p id="testP" class="funParagraph">Jamaica is the most revent location that I have visisted. So far i would say it is one of my absolute favorites. From the views and the beaches to the locals and how kind and welcoming they were.</p>
             <h3>Things To Do Here</h3>
             <ul>
                <li>Site See</li>
