changed styling of pics

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <li>Drink</li>
                <li>Water Activities</li>
             </ul>
-            <img src="https://www.dropbox.com/s/ll55v1q7y11ctmx/IMG-0311.jpg?raw=1" alt="Jamaica Beach" width="550" height="400">
+            <img src="images\Jamaica.jpg" alt="Jamaica Beach" width="550" height="550">
             </section>
 
             <section>
@@ -34,7 +34,7 @@
                <li>Hike</li>
                <li>ATV/Off roading</li>
             </ul>
-            <img src="https://www.dropbox.com/s/pqe8ctdysnnnxbz/IMG-0599.jpg?raw=1" alt="Utah Canyons" width="400" height="450">
+            <img src="images\Utah.jpg" alt="Utah Canyons" width="550" height="550">
             </section>
 
             <section>
@@ -46,7 +46,8 @@
                <li>Site See</li>
                <li>Hike in the mountains</li>
                <li>Ski/Snow Board</li>
-            <img src="https://www.dropbox.com/s/s8l1e9wkkpzm70t/IMG-0600.JPG?raw=1" alt="Canadian Mountains" width="550" height="400">
+            </ul>
+            <img src="images\Banff.JPG" alt="Canadian Mountains" width="550" height="550">
             </section>
          </article>
 
