--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
       <link rel="stylesheet" href="styles.css" />
    </head>
    <body>
-
+      <header>
       <h1 id="mainHeading">WHERE I'VE BEEN</h1>
       <p class="overView">This web page will go over some of my favorite places that I have traveled to in recent years</p>
-      
+      </header>
       <main>
 
 
-         <article>
-            <section>
+         <Article>
+            <Section>
                <a name="Jamaica"></a>
             <h2>Jamaica</h2>
-            <p id="testP" class="funParagraph">Jamaica is the most revent location that I have visisted. So far i would say it is one of my absolute favorites. From the views and the beaches to the locals and how kind and welcoming they were.</p>
+            <P id="testP" class="funParagraph">Jamaica is the most revent location that I have visisted. So far i would say it is one of my absolute favorites. From the views and the beaches to the locals and how kind and welcoming they were.</P>
             <h3>Things To Do Here</h3>
             <ul>
                <li>Site See</li>
@@ -25,7 +25,7 @@
                <li>Water Activities</li>
             </ul>
             <img src="images\Jamaica.jpg" alt="Jamaica Beach" width="550" height="550">
-            </section>
+            </Section>
 
             <section>
                <a name="Utah"></a>
@@ -52,7 +52,7 @@
             </ul>
             <img src="images\Banff.JPG" alt="Canadian Mountains" width="550" height="550">
             </section>
-         </article>
+         </Article>
 
          <footer>
          <p>&copy; 2022 Nolan Dietz</p>
