changed some elements

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
       <link rel="stylesheet" href="styles.css" />
    </head>
    <body>
-      <header>
+      <Header>
       <h1 id="mainHeading">WHERE I'VE BEEN</h1>
       <p class="overView">This web page will go over some of my favorite places that I have traveled to in recent years</p>
-      </header>
-      <main>
+      </Header>
+      <Main>
 
 
          <Article>
@@ -27,7 +27,7 @@
             <img src="images\Jamaica.jpg" alt="Jamaica Beach" width="550" height="550">
             </Section>
 
-            <section>
+            <Section>
                <a name="Utah"></a>
             <h2>Utah</h2>
             <p>Utah holds a special place in my heart. I traveled her with my wife after out small wedding ceremony in St. Louis to have pictures taken in the canyons. The pictures were beautiful and it was an amazing experience.</p>
@@ -38,12 +38,12 @@
                <li>ATV/Off roading</li>
             </ul>
             <img src="images\Utah.jpg" alt="Utah Canyons" width="550" height="550">
-            </section>
+            </Section>
 
             <section>
                <a name="Banff"></a>
             <h2>Banff, Canada</h2>
-            <p>Band is one of the first places my wife and I traveled to outside of the country. Banff is a small ski town in the mountains of Alberta. This is a place that we definetely plan to go back to soon.</p>
+            <P>Band is one of the first places my wife and I traveled to outside of the country. Banff is a small ski town in the mountains of Alberta. This is a place that we definetely plan to go back to soon.</P>
             <h3>Things To Do Here</h3>
             <ul>
                <li>Site See</li>
@@ -54,9 +54,9 @@
             </section>
          </Article>
 
-         <footer>
-         <p>&copy; 2022 Nolan Dietz</p>
-         </footer>
+         <Footer>
+         <P>&copy; 2022 Nolan Dietz</P>
+         </Footer>
 
 
 
@@ -69,6 +69,6 @@
 
 
 
-      </main>
+      </Main>
    </body>
 </html>
