--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="images\Utah.jpg" alt="Utah Canyons" width="550" height="550">
             </Section>
 
-            <section>
+            <Section>
                <a name="Banff"></a>
             <h2>Banff, Canada</h2>
             <P>Band is one of the first places my wife and I traveled to outside of the country. Banff is a small ski town in the mountains of Alberta. This is a place that we definetely plan to go back to soon.</P>
@@ -51,7 +51,7 @@
                <li>Ski/Snow Board</li>
             </ul>
             <img src="images\Banff.JPG" alt="Canadian Mountains" width="550" height="550">
-            </section>
+            </Section>
          </Article>
 
          <Footer>
