added an aside element within the body

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <h1 id="mainHeading">WHERE I'VE BEEN</h1>
       <p class="overView">This web page will go over some of my favorite places that I have traveled to in recent years</p>
       </Header>
-      <Main>
 
+      <Main>
 
          <Article>
             <Section>
@@ -58,17 +58,19 @@
          <P>&copy; 2022 Nolan Dietz</P>
          </Footer>
 
-
-
-
-
-
-
-
-
-
-
-
       </Main>
+
+      <aside>
+         <h3>Some random places I've been</h3>
+         <ul>
+            <li>Texas</li>
+            <li>New York</li>
+            <li>Colorado</li>
+            <li>Indiana</li>
+         </ul>
+
+      </aside>
+
+
    </body>
 </html>
